--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.21",
+    "postcss-nesting": "^11.2.1",
     "tailwindcss": "^3.2.7",
     "typescript": "*"
   }
