--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "autoprefixer": "^10.4.14",
+    "cheerio": "1.0.0-rc.12",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "openai": "^3.2.1",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.2.1",
     "tailwindcss": "^3.2.7",
