--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.11",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -29,7 +30,6 @@
     "eslint-plugin-react": "^7.32.2",
     "openai": "^3.2.1",
     "postcss": "^8.4.21",
-    "postcss-nesting": "^11.2.1",
     "tailwindcss": "^3.2.7",
     "typescript": "*"
   }
