♻️ Changes directory structure and fix auth issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,11 @@
         "name": "next"
       }
     ],
+    "baseUrl": "./src/",
     "paths": {
-      "@/*": ["./*"]
+       "@components/*": ["./app/components/*"],
+       "@api/*": ["./app/pages/api/*"],
+       "@utils/*": ["./utils/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
