--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.5.6",
     "@supabase/supabase-js": "^2.12.1",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "encoding": "^0.1.13",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.56.0",
