--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
        "@components/*": ["./app/components/*"],
        "@api/*": ["./app/pages/api/*"],
        "@utils/*": ["./utils/*"],
+       "@assets/*": ["./app/assets/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
