:recycle: Fix some login problems

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,6 +63,12 @@
       ],
       "@typescript-eslint/explicit-function-return-type": [
          "off"
+      ],
+      "@typescript-eslint/no-misused-promises": [
+         "error",
+         {
+            "checksVoidReturn": false
+         }
       ]
    }
 }
