--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "encoding": "^0.1.13",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
-    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reactjs-popup": "^2.0.5",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.56.0",
