--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-  "name": "webmarks",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.5.6",
-    "@supabase/supabase-js": "^2.12.1",
-    "@types/node": "18.15.5",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "encoding": "^0.1.13",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "reactjs-popup": "^2.0.5",
-    "server-only": "^0.0.1",
-    "zustand": "^4.3.7"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "autoprefixer": "^10.4.14",
-    "cheerio": "1.0.0-rc.12",
-    "eslint": "^8.0.1",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.32.2",
-    "openai": "^3.2.1",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "typescript": "*"
-  }
+   "name": "webmarks",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@heroicons/react": "1.0.6",
+      "@supabase/auth-helpers-nextjs": "^0.6.0",
+      "@supabase/supabase-js": "^2.20.0",
+      "@tremor/react": "^2.1.0",
+      "@types/node": "18.15.11",
+      "@types/react": "18.0.35",
+      "@types/react-dom": "18.0.11",
+      "encoding": "^0.1.13",
+      "eslint-config-next": "13.3.0",
+      "next": "13.3.0",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "reactjs-popup": "^2.0.5",
+      "server-only": "^0.0.1",
+      "zustand": "^4.3.7"
+   },
+   "devDependencies": {
+      "@typescript-eslint/eslint-plugin": "^5.58.0",
+      "@typescript-eslint/parser": "^5.58.0",
+      "autoprefixer": "^10.4.14",
+      "cheerio": "1.0.0-rc.12",
+      "eslint": "^8.38.0",
+      "eslint-config-standard-with-typescript": "^34.0.1",
+      "eslint-plugin-import": "^2.27.5",
+      "eslint-plugin-n": "^15.7.0",
+      "eslint-plugin-promise": "^6.1.1",
+      "eslint-plugin-react": "^7.32.2",
+      "openai": "^3.2.1",
+      "postcss": "^8.4.21",
+      "tailwindcss": "^3.3.1",
+      "typescript": "^5.0.4"
+   }
 }
